--- a/style.css
+++ b/style.css
@@ -1,348 +1,126 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Courier New', Courier, monospace;
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 body{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-.container{
-    height: 100vh;
-    width: 100%;
-    scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
-
-}
-.section{
-    height: 100vh;
-    display: flex;
-
-    scroll-snap-align: start;
-    align-items: center;
-    justify-content: center;
-}
-#first-page{
-    background-image: url("cover.jpg");
-    background-size: cover;
-    background-position: center;
-}
-.navbar{
-    height: 6vh;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    background: linear-gradient(to left, rgb(175, 218, 235), rgb(199, 232, 236));
-}
-.navbar .menu{
-    height: 4vh;
-    width: 70%;
-    display: flex;
-    justify-content: flex-end;
-    gap: 2vh;
-    align-items: center;
-}
-.navbar .menu a{
-    text-decoration: none;
-    color: black;
-    border: 0.2vh solid rgb(36, 34, 34);
-    border-radius: 1vh;
-    padding-left: 1vh;
-    padding-right: 1vh;
-    padding-top: 0.4vh;
-    padding-bottom: 0.4vh;
-}
-.navbar .menu a:hover {
-    background-color: rgb(67, 183, 187);
-    color: aliceblue;
-    border: 0.2vh solid white;
-     
-}
-.logo{
-    height: 30vh;
-    width: 30vh;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.logo h2{
-    font-size: 12vh;
-    color: transparent;
-    font-family: cursive;
-    text-align: center;
-    background: linear-gradient(to top right, red , blue , yellow);
-    background-clip: text;
-
-}
-#second-page{
   height: 100vh;
-  width: 100%;
-  background-color: black;
+  width: 100vw;
+  background-color: linear-gradient(rgba(0,0,0,0
+  .4),rgba(0,0,250,0.4));
 }
-.cart{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.cover-topbar{
-    height: 6.3vh;
-    width: 100%;
-    background-color:black;
-}
-.cart-navbar{
-    height: 4vh;
-    width: 20%;
-    border-radius: 4vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: aliceblue;
-}
-
-.cart-navbar h2{
-    font-family: cursive;
-    margin: 1vh;
-}
-.cart-navbar i{
-    font-size: 2.2vh;
-    color: orange;
-}
-.cart-content{
-    margin: 1vh;
-    height: 80vh;
-    width: 90%;
-    background-color: white;
-}
-
-.product{
-    height: 20vh;
-    width: 100%;
-    background-color: yellow;
-    display: flex;
-    align-items: center;
-}
-.search-product{
-    text-decoration: none;
-    background-color: aqua;
-}
-.delete{
-    display: none;
-}
-.product-image{
-    margin-left: 7vw;
-    height: 15vh;
-    width: 30%;
-    background-color: aqua;
-    box-shadow: burlywood;
-}
-.product-quantity{
-    margin-left: 8vw;
-    height: 5vh;
-    width: 24%;
-    background-color: aqua; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-
-}
-.product-quantity button{
-    height: 5vh;
-    width: 30%;
-    border: none;
-    font-size: 4vh;
-    font-weight: 700;
-    background-color: yellowgreen;
-    
-}
-.product-quantity p{
-    height: 5vh;
-    width: 40%;
-    text-wrap: wrap;
-    font-size: 5vh;
-    font-weight: 500;
-    text-align: center;
-
-}
-.ShoWprice{
-    height: 2vh;
-    padding: 0.4vw;
-    width: auto;
-    margin-left: 2vw;
-    background-color: aqua;
-}
-.Menu-navbar{
-  height: 2vh;
-  background-color: black;
-
-}
-#second-page .box{
-  height: 20%;
-  width: 100%;
-  background-color: transparent;
+#container{
+  height: 100vh;
+  width: 100vw;
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-direction: column;
-  
+  justify-content: center;
 }
-.box h2{
-  padding: 0.6vh;
-  background-color: antiquewhite;
-  border-radius: 1vh;
-  font-size: medium;
-  border: 1px solid white;
-  text-align: center;
-  margin: 1vh;
-}
-table, th, td {
-  height: 10%;
-  border: 1px solid white;
-  background-color: rgb(16, 234, 241);
-  padding: .6vh;
-  border-radius: 1vh;  
-}
-
-#third-page{ 
-  background: linear-gradient(to top left, rgb(97, 196, 230), rgb(147, 192, 218), rgb(100, 173, 207), rgb(173, 230, 230));
+#calculator {
+  height: 70vh;
+  width: 80vw;
+  border-radius: 10px;
+  border: 12px solid white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  flex-direction: column;
 }
-.contactUs{
-  height: 90.4vh;
+#screen{
+  margin-top: 1vh;
+  word-break: wrap;
+  outline: none;
+  height: 22vh;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
-.contact{
-    height: 70vh;
-    width: 90vw;
-    border: 2px solid white;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    background-color: cadetblue;
-    
+#input{
+  margin-top: 1vh;
+  word-break: wrap;
+  outline: none;
+  height: 10vh;
+  width: 97%;
+  font-size: 40px;
+  text-align: end;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
 }
-.contact h2{
-    font-size: 4vh;
-    color: white;
+
+.input{
+  margin-top: 1vh;
+  word-break: wrap;
+  background-color: gainsboro;
+  outline: none;
+  border: none;
+  height: 10vh;
+  width: 70vw;
+  margin: 2vh;
+  font-size: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-form{
-    height: 75vh;
-    width: 90vw;
-    border-top: 0.1vh solid white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 3vh;
+#Output{
+  height: 6vh;
+  margin-top: 1vh;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  justify-content: center;
 }
-.firstname{
-    height: 5vh;
-    width: 80vw;
-    display: flex;
-    background-color: white;
-    align-items: center;
-}
-input{
-    height: 4vh;
-    width: 52vw;
-    color: cadetblue;
-    background-color: floralwhite;
-    border: 0.1vh solid white;
-    text-align: center;
-    font-size: 2vh;
-    outline: none;
-    text-decoration: none;
-}
-label{
-    font-size: 2vh;
-    margin-left: 1vh;
-    margin-right: 1vh;
-    color: cadetblue;
-    font-weight: 600;
-}
-.lastname{
-    height: 5vh;
-    width: 80vw;
-    display: flex;
-    align-items: center;
-    background-color: white;
+#Output .cancel{
+  color: red;
+  height: 100%;
+  width: 50%;
+  border: 2px solid red;
+  border-radius: 10px;
+  margin-right: 10px;
+  background-color: transparent;
   
 }
-.state{
-    height: 5vh;
-    width: 80vw;
-    background-color: white;
-    display: flex;
-    align-items: center;
+#Output .EqualTo{
+  color: black;
+  border-radius: 10px;
+  height: 100%;
+  width: 50%;
 }
-.state select{
-    outline: none;
-    text-decoration: none;
-    margin-left: 13vh;
-    height: 4vh;
-    width: 16vh;
-    font-size: 2vh;
-    color: cadetblue;
-    border: none;
-    background-color: floralwhite;
-    border: 0.1vh solid cadetblue;
+#operations{
+  height: 87vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-.email{
-    height: 5vh;
-    width: 80vw;
-    background-color: white;
-    display: flex;
-    align-items: center;
+#operators{
+  height: 100%;
+  width: 98%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-.Query{
-    height: 22vh;
-    width: 80vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column ;
-    background-color: white;
-    text-align:  center;
-    border-radius: 2vh;
+#changeColor{
+  color: red;
 }
-#queries{
-    height: 15vh;
-    width: 60vw;
-    outline: none;
-    font-size: 1.9vh;
-    text-decoration: none;
-    padding: 1vh;
-    border: none;
-    border: 0.1vh solid cadetblue;
-    background-color: floralwhite;
+.line{
+  height: 19%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
-.submit button{
-    outline: none;
-    text-decoration: none;
-    border: none;
-    padding: 1.5vh;
-    font-size: 1.8vh;
-    font-weight: 600;
-    width: 22vw;
-    border-radius: 1vh;
-    background-image: white;
-    background-color: floralwhite;
+.operator{
+  height: 94%;
+  font-size: 4.3vh;
+  width: 31%;
+  border-radius: 10%;
+  outline: none;
+  border: none;
 }
-.submit button:hover{
-    border: 0.2vh solid white;
-}
-  
