--- a/style.css
+++ b/style.css
@@ -1,126 +1,80 @@
 *{
   margin: 0;
   padding: 0;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-body{
-  height: 100vh;
-  width: 100vw;
-  background-color: linear-gradient(rgba(0,0,0,0
-  .4),rgba(0,0,250,0.4));
-}
-#container{
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-#calculator {
-  height: 70vh;
-  width: 80vw;
-  border-radius: 10px;
-  border: 12px solid white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-direction: column;
-}
-#screen{
-  margin-top: 1vh;
-  word-break: wrap;
-  outline: none;
-  height: 22vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-#input{
-  margin-top: 1vh;
-  word-break: wrap;
-  outline: none;
-  height: 10vh;
-  width: 97%;
-  font-size: 40px;
-  text-align: end;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
+  font-family: sans-serif;
+  box-sizing: border-box;
 }
 
-.input{
-  margin-top: 1vh;
-  word-break: wrap;
-  background-color: gainsboro;
-  outline: none;
-  border: none;
-  height: 10vh;
-  width: 70vw;
-  margin: 2vh;
-  font-size: 40px;
+#container{
+  width: 100%;
+  height: 100vh;
+  background: #e3f9ff;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-#Output{
-  height: 6vh;
-  margin-top: 1vh;
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  justify-content: center;
-}
-#Output .cancel{
-  color: red;
-  height: 100%;
-  width: 50%;
-  border: 2px solid red;
+.calculator{
+  background: black;
+  padding: 20px;
   border-radius: 10px;
-  margin-right: 10px;
-  background-color: transparent;
+}
+.calculator form input{
+  border: none;
+  outline: none;
+  width: 60px;
+  height: 60px;
+  border-radius: 10px;
+  box-shadow: -8px -8px 15px rgba(255,255,255,0.1),5px 5px 15px rgba(0,0,0,0.2);
+  background: transparent;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+  margin: 10px;
+}
+form .display{
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px 0;
+}
+form .display input{
+  text-align: right;
+  flex: 1;
+  font-size: 45px;
+  box-shadow: none;
+}
+#opert{
+  color: #199ae6e1;
+}
+.colorManage{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  width: 50%;
+  margin: auto;
   
 }
-#Output .EqualTo{
-  color: black;
-  border-radius: 10px;
-  height: 100%;
-  width: 50%;
+.clr{
+  height: 20px;
+  cursor: pointer;
+  margin: auto;
+  width: 20px;
+  border-radius: 50%;
+  background-color: black;
 }
-#operations{
-  height: 87vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+.black{
+  border: 2px solid white;
+  background-color: black;
 }
-#operators{
-  height: 100%;
-  width: 98%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+.purple{
+  border: 2px solid white;
+  background-color: purple;
 }
-#changeColor{
-  color: red;
+.yellow{
+  border: 2px solid white;
+  background-color: yellow;
 }
-.line{
-  height: 19%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-.operator{
-  height: 94%;
-  font-size: 4.3vh;
-  width: 31%;
-  border-radius: 10%;
-  outline: none;
-  border: none;
+.white{
+  border: 2px solid white;
+  background-color: blue;
 }
