--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@
 #container{
   width: 100%;
   height: 100vh;
-  background: #e3f9ff;
+  background: url("b1.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -63,18 +66,18 @@ form .display input{
   background-color: black;
 }
 .black{
-  border: 2px solid white;
+  border: 2px solid black;
   background-color: black;
 }
 .purple{
-  border: 2px solid white;
+  border: 2px solid purple;
   background-color: purple;
 }
 .yellow{
-  border: 2px solid white;
-  background-color: yellow;
+  border: 2px solid #ff9900e5;
+  background-color: #ff9900e5;
 }
 .white{
-  border: 2px solid white;
-  background-color: blue;
+  border: 2px solid #0d0941e5;
+  background-color: #0d0941e5;
 }
